# DosGames

./: cmd.exe.lnk
skull/: .cursor-auto-keep  .gitignore  ADVERT.EMS  ALL_WRAPPERS_FIXED.md  AUTOMATED_WALKTHROUGH_BREAKTHROUGH.md  AUTOMATED_WALKTHROUGH_COMPLETE.md  AUTOMATED_WALKTHROUGH_DEEP_DIVE.md  AUTOMATED_WALKTHROUGH_FINAL_STATUS.md  AUTOMATED_WALKTHROUGH_PROGRESS_UPDATE.md  AUTOMATED_WALKTHROUGH_README.md  BUILD_INSTRUCTIONS.md  BUILD_STATUS.md  CHECK_COMMAND_CONDITIONS_DEEP_DIVE_COMPLETE.md  CHECK_GAME_STATE_FIX_SUCCESS.md  CLEAN_OUTPUT_GUIDE.md  CODE_IMPROVEMENTS_COMPLETE.md  COMMAND_LOOKUP_BREAKTHROUGH.md  COMPLETE_GAME_WALKTHROUGH.md  COMPLETE_STORY_CONTENT.md  COMPLETE_VERIFICATION_SUMMARY.md  COMPREHENSIVE_CODE_AUDIT.md  CRITICAL_FIX_RESULTS_2026-01-16.md  CRITICAL_FUNCTIONS_ENHANCED.md  CURSOR_NETWORK_TEST_RESULTS.md  CURSOR_TIMEOUT_FIX.md  DATA_FILE_FORMAT_SUMMARY.md  DISPLAY_CONVERSION_PROGRESS.md  DISPLAY_FUNCTIONS_COMPLETE.md  DISPLAY_FUNCTIONS_TEST_RESULTS.md  DOS_FLOW_FIXES_COMPLETE.md  DOS_FLOW_FIXES_SUMMARY.md  DOS_TO_WINDOWS_MIGRATION_REPORT.md  ENCRYPTION_ANALYSIS.md  ENTRY_FUNCTION_STATUS.md  EPIC_SESSION_FINAL_SUMMARY_2026-01-16.md  ERROR_HANDLING.md  ERROR_HANDLING_IMPROVEMENTS_SUMMARY.md  ERROR_LIMIT_FIX.md  EXCEPTION_ANALYSIS.md  EXCEPTION_HANDLING_IMPROVEMENTS.md  (+194 more)
skull/backups/: README.md
skull/skull_project.rep/: project.prp
skull/skull_project.rep/idata/00/: 00000000.prp
skull/skull_project.rep/idata/00/~00000000.db/: db.1.gbf  (+1 more)
skull_backup_2026-01-10_140535/: BACKUP_README.md
skull_backup_2026-01-10_140535/build_scripts/: build_output.txt  build_test.bat  build_with_msvc.bat  run_tests_and_update.bat  run_tests_and_update.ps1  test_build.bat  test_progress_tracker.bat
skull_backup_2026-01-10_140535/c_files/: skull_ported.c  test_functions.c
skull_backup_2026-01-10_140535/cmake/: CMakeLists.txt
skull_backup_2026-01-10_140535/headers/: game_constants.h
skull_backup_2026-01-10_140535/python_scripts/: analyze_skull.py  decompile_skull.py  disassemble_skull.py  export_ghidra_decompiled.py  generate_stubs.py  port_decompiled.py  rename_fun_to_real_names.py
